objects/GenAIGatewayResponse__dlm.object
<CustomObject>
    <fields>
        <fullName>KQ_generationRequestId__c</fullName>
        <label>Key Qualifier Generation Request Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_generationResponseId__c</fullName>
        <label>Key Qualifier Generation Response Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>Cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generationRequestId__c</fullName>
        <label>Generation Request Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generationResponseId__c</fullName>
        <label>Generation Response Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>Org Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parameters__c</fullName>
        <label>Parameters</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_1753303637631_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GenAIGatewayResponse_generationReque_rel</label>
        <referenceTo>GenAIGatewayRequest__dlm</referenceTo>
        <relationshipLabel>GenAIGatewayResponse_generationReque_rel</relationshipLabel>
        <relationshipName>rel_1753303637631_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>